--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <!-- Emergency API URL fix - must load before main app -->
+    <script src="/fix-api-url.js"></script>
   </head>
 
   <body>
